# demo/demo_app/docs/swagger.json
@@ -4,9 +4,17 @@
         "contact": {}
     },
     "paths": {
-        "/api/health": {
+        "/health": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves memory usage, goroutine count, version, hostname, Go runtime version, and OS.",
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "info"
                 ],
@@ -17,37 +25,29 @@
                         "schema": {
                             "$ref": "#/definitions/health.Model"
                         }
-                    }
-                }
-            }
-        },
-        "/api/ready": {
-            "get": {
-                "description": "Checks if the application and its dependencies are ready to serve traffic.",
-                "tags": [
-                    "info"
-                ],
-                "summary": "Readiness check",
-                "responses": {
-                    "200": {
-                        "description": "Application is ready",
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/health.Model"
+                            "type": "string"
                         }
                     }
                 }
             }
         },
-        "/api/version": {
+        "/version": {
             "get": {
-                "description": "Returns the name and version of the application for debugging and monitoring.",
+                "description": "Returns the current application name and version. No authentication required.",
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "info"
                 ],
                 "summary": "Get application version and name",
                 "responses": {
                     "200": {
-                        "description": "Application version and name successfully retrieved",
+                        "description": "Application version and name",
                         "schema": {
                             "type": "object",
                             "properties": {
